--- a/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/about_the_case.yml
+++ b/docassemble/ServiceByAltMeansAndDiligentSearch/data/questions/about_the_case.yml
@@ -98,18 +98,22 @@ if address_unknown:
   other_parties[0].address.zip = ' '  
 ---
 id: date defendant last lived at address 
-question: |
+question: |  
   When did  ${ other_parties[0].name } last live at the above address ?
 subquestion: |
-  This can be a guess or the exact date 
+  This can be a guess or the exact date
 fields:
   - 'I do not know the exact date': do_not_know
     datatype: yesno
   - '${ other_parties[0].name } last lived at the above address': address_date
     datatype: date
-    hide if: do_not_know
+    hide if: 
+      variable: do_not_know
+      is: True
   - 'Best guess when ${ other_parties[0].name } last lived at the above address': address_date_guess
-    show if: do_not_know
+    show if:
+      variable: do_not_know
+      is: True
 ---
 id: address unknown logic
 code: |
